# window_tiler

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.opencode/guides/: artifact_management_guide.md  guide_persistent_context.md  guide_skills_system.md
.opencode/templates/artifact_templates/: template_implementation_plan.md  template_metadata_json.md  template_resolved_status.md  template_task.md  template_walkthrough.md
.opencode/workflows/: agent_workflow_guide.md  guide_notebooklm_research.md
docs/: advanced_ai_systems_overview.md
src/: app_config.py  event_monitor.py  hotkey_manager.py  main.py  overlay_manager.py  settings_gui.py  tiling_engine.py  tray_manager.py  win_utils.py
src/core/: __init__.py  config_manager.py  global_window_manager.py  layout_calculator.py  slot_manager.py  slot_tree_controller.py
src/gui/: excluded_window_selector.py  hotkey_entry.py  preview_canvas.py  slot_tree.py  theme.py  window_selector.py
src/gui/components/: control_panel.py  profile_panel.py  split_panel.py
src/models/: __init__.py  common.py
src/win_utils/: __init__.py  monitor_api.py  window_api.py  window_filter.py
