[project]
name = "win-tiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keyboard>=0.13.5",
    "pillow>=12.1.1",
    "pystray>=0.19.5",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
